<?xml version = '1.0' encoding = 'UTF-8'?>
<project xmlns = 'http://maven.apache.org/POM/4.0.0' xmlns:xsi = 'http://www.w3.org/2001/XMLSchema-instance'
         xsi:schemaLocation = 'http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd'>
  <modelVersion> 4.0.0 </modelVersion>

  <parent>
    <groupId> org.springframework.boot </groupId>
    <artifactId> spring-boot-starter-parent </artifactId>
    <version> 3.4.3 </version>
  </parent>

  <groupId> lonter </groupId>
  <artifactId> bat </artifactId>
  <version> 0.1 </version>
  <name> bat </name>
  <description> Utilities to easily make a BOT in Java </description>

  <properties>
    <java.version> 23 </java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId> org.springframework.boot </groupId>
      <artifactId> spring-boot-starter </artifactId>
    </dependency>

    <dependency>
      <groupId> org.projectlombok </groupId>
      <artifactId> lombok </artifactId>
      <version> 1.18.36 </version>
      <scope> provided </scope>
    </dependency>

    <dependency>
      <groupId> org.jetbrains </groupId>
      <artifactId> annotations </artifactId>
      <version> 24.0.0 </version>
      <scope> compile </scope>
    </dependency>

    <dependency>
      <groupId> net.dv8tion </groupId>
      <artifactId> JDA </artifactId>
      <version> 5.2.1 </version>
    </dependency>

    <dependency>
      <groupId> org.reflections </groupId>
      <artifactId> reflections </artifactId>
      <version> 0.10.2 </version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId> org.apache.maven.plugins </groupId>
        <artifactId> maven-compiler-plugin </artifactId>

        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId> org.projectlombok </groupId>
              <artifactId> lombok </artifactId>
            </path>
          </annotationProcessorPaths>

          <source> 23 </source>
          <target> 23 </target>
          <compilerArgs> --enable-preview </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId> org.springframework.boot </groupId>
        <artifactId> spring-boot-maven-plugin </artifactId>

        <configuration>
          <excludes>
            <exclude>
              <groupId> org.projectlombok </groupId>
              <artifactId> lombok </artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>